Fix overflow 1.5

--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ background: linear-gradient(75deg, rgba(255,240,164,1) 0%, rgba(241,104,150,1) 3
     overflow-x: auto;
 }
 
-@media (max-width: 700px) {
+@media (max-width: 793px) {
     .documentation-carousel{
         width: 500px;
         height: 330px;
